# dcalc

./: .eslintrc  .gitignore  .gitmodules  .npmrc  README.en.md  README.md  fix.bat  main.py  package.json  pnpm-lock.yaml  requirements.txt  taze.config.ts  tsconfig.json
backend/: 1.json  1.py  equ.py  main.py  mcpServer.py  output.py  pyproject.toml  ruff.toml  test.py
backend/api/: dp.py  main.py
backend/api/core/: Auth.py  Exceptions.py  Gzip.py  Middleware.py  Redis.py  Response.py  exception.py  zipfile.py
backend/api/routes/: calc.py  info.py  openapi.py
backend/api/types/: open.py
backend/config/: .env  .env.prod  main.py
backend/core/abstract/: character.py
backend/core/basic/: character.py  equipment.py  formula.py  property.py  roleinfo.py  skill.py
backend/core/character/: adventure.py  defaultConfig.py
backend/core/character/GF/archer/: chimera.py  hunter.py  muse.py  traveler.py  vigilante.py
backend/core/character/GF/demonic_lancer/: dragoon.py  impaler.py  skirmisher.py  vanguard.py
backend/core/character/GF/extra/: creator.py  dark_knight.py
backend/core/character/GF/fighter_female/: brawler_female.py  grappler_female.py  (+2 more)
backend/core/equipment/version_0/: __init__.py  avatar.py  consumable.py  emblem.py  enchant.py  enchatings.py  equ.py  jade.py  register.py  stone.py  suit.py  sundary.py  sundry.py
backend/core/util/: host.py  minheap.py  store.py  toNum.py
backend/dataFiles/: adventure-info.json  dcalc_0.db  dcalc_1.db  map.json
backend/database/: __init__.py  connect.py  models.py
backend/generate/: equ.py  stone.py
(+308 files in other folders)
