[project]
name = "dcalc-backend"
version = "0.1.0"
description = "A backend project for dcalc, a calculator application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.11",
    "fastmcp>=2.7.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
]
